--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,21 @@
 {
   "compilerOptions": {
-      "outDir": "./dist/",
-      "sourceMap": true,
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "target": "es5",
-      "jsx": "react",
-      "skipLibCheck": true,
-      "lib": ["es2017", "dom"],
-      "types" : ["node", "websocket", "jest"],
-      "strict": true,
-      "declaration": true,
-      "baseUrl": ".",
-      "paths": {
-        "@lib/*": [
-            "src/lib/*"
-        ]
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "module": "ESNext",
+    "esModuleInterop": true,
+    "target": "ESNext",
+    "jsx": "react",
+    "skipLibCheck": true,
+    "lib": ["es2017", "dom"],
+    "types": ["node", "websocket", "jest"],
+    "strict": true,
+    "declaration": true,
+    "baseUrl": ".",
+    "paths": {
+      "@lib/*": ["src/lib/*"]
     }
   },
-  "files": [
-    "./src/index.ts"
-  ],
-  "include": [
-    "src/*"
-  ]
+  "files": ["./src/index.ts"],
+  "include": ["src/*"]
 }
