--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-use-websocket",
-  "version": "4.11.1",
+  "name": "@jikyu/react-use-websocket",
+  "version": "5.0.0",
   "description": "React Hook for WebSocket communication",
   "main": "./dist/index.js",
   "files": [
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/robtaussig/react-use-websocket.git"
+    "url": "git+https://github.com/jikyu/react-use-websocket.git"
   },
   "types": "./dist/index.d.ts",
   "devDependencies": {
